@@ -44,6 +44,38 @@ name|analysis
 operator|.
 name|util
 operator|.
+name|AbstractAnalysisFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|util
+operator|.
+name|MultiTermAwareComponent
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|util
+operator|.
 name|TokenFilterFactory
 import|;
 end_import
@@ -69,6 +101,8 @@ class|class
 name|ScandinavianNormalizationFilterFactory
 extends|extends
 name|TokenFilterFactory
+implements|implements
+name|MultiTermAwareComponent
 block|{
 DECL|method|ScandinavianNormalizationFilterFactory
 specifier|public
@@ -125,6 +159,18 @@ name|ScandinavianNormalizationFilter
 argument_list|(
 name|input
 argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|getMultiTermComponent
+specifier|public
+name|AbstractAnalysisFactory
+name|getMultiTermComponent
+parameter_list|()
+block|{
+return|return
+name|this
 return|;
 block|}
 block|}
